--- a/Play_Canvas fla.html
+++ b/Play_Canvas fla.html
@@ -22,7 +22,7 @@
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="Play_Canvas fla.js?1759469488643"></script>
+<script src="Play_Canvas fla.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
